saturn-program-macros/tests/compile_fail/unknown_btc_tx_cfg_key.stderr
error: unknown key inside btc_tx_cfg; expected `max_inputs_to_sign`, `max_modified_accounts`, or `rune_set`
  --> tests/compile_fail/unknown_btc_tx_cfg_key.rs:13:16
   |
13 |     btc_tx_cfg(foo = 1, max_inputs_to_sign = 1, max_modified_accounts = 1)
   |                ^^^^^^^
